# fsp-quals-2024

./: .env  .gitignore  README.md
backend/: go.mod  go.sum
backend/internal/app/: launch.go
backend/internal/db/clickhouse/: client.go  queries.go
backend/internal/db/sql/: database.go
backend/meta/: Dockerfile  go.mod  go.sum  justfile
backend/meta/config/: config.yaml
backend/meta/docs/: docs.go
backend/meta/internal/app/: launch.go  startup.go
backend/meta/internal/app/appcontext/: context.go
backend/meta/internal/config/: database.go  integrations.go  mail.go  models.go
backend/meta/internal/mail/: mail.go  templates.go
backend/meta/internal/model/: event.go  filter.go  location.go  notify.go  subscription.go
backend/meta/tests/: filter_test.go
backend/parser/: .example.env  .gitignore  Dockerfile  pyproject.toml
backend/parser/src/parser/: clickhouse.py  log.py  main.py  pipeline.py  settings.py  steps.py  util.py
backend/parser/src/parser/clickhouse/: core.py  queries.py
backend/tests/: filter_test.go
db/: init.sql
db/clickhouse/: init.sql
deploy/: compose.yml
frontend/: Dockerfile  bun.lockb  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/nginx/: nginx.conf
frontend/src/: App.vue  ConfirmPage.vue  MainPage.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/ui/: Chooser.vue  DateFilterPicker.vue  SubscribeDialog.vue  TableView.vue  WeeklyEvent.vue  WeeklyView.vue  index.ts
frontend/src/lib/: dataSource.ts  utils.ts
frontend/src/router/: index.ts
(+26 files in other folders)
