[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-driver>=0.2.9",
    "pandas>=2.2.3",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
    "pypdf>=5.1.0",
    "httpx>=0.27.2",
]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.6.9",
    "pylsp-rope>=0.1.17",
    "python-lsp-server>=1.12.0",
    "ruff>=0.7.4",
]

[project.scripts]
launch = "parser.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.28.0",
    "ruff>=0.7.1",
    "python-lsp-server[all]>=1.12.0",
    "pylsp-rope>=0.1.16",
    "pylsp-mypy>=0.6.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/parser"]

[tool.ruff]
line-length = 79
target-version = "py311"
exclude = [
    "*__init__.py",
    "tests/",
    "_deps/",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
